migration to ts

--- a/02-bases/package.json
+++ b/02-bases/package.json
@@ -5,13 +5,18 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon",
+    "build": "rimraf ./dist && tsc",
+    "start": "npm run build && node dist/app.js"
   },
   "author": "Gabriela Flores",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "@types/node": "^20.11.19",
+    "nodemon": "^3.0.3",
+    "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "axios": "^1.6.7",
