--- a/02-bases/package.json
+++ b/02-bases/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
+    "@types/uuid": "^9.0.8",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "rimraf": "^5.0.5",
