using rimraf and build

--- a/02-bases/package.json
+++ b/02-bases/package.json
@@ -8,7 +8,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "dev": "nodemon",
-    "build": "rimraf ./dist && tsc",
+    "build": "npm run test && rimraf ./dist && tsc",
     "start": "npm run build && node dist/app.js"
   },
   "author": "Gabriela Flores",
