--- a/04-multiplication/package.json
+++ b/04-multiplication/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/app.ts",
+    "dev": "ts-node src/app.ts -b 10",
     "dev:nodemon": "nodemon",
     "build": "rimraf ./dist && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,9 +14,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.11.20",
+    "@types/yargs": "^17.0.32",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "yargs": "^17.7.2"
   }
 }
