--- a/04-multiplication/package.json
+++ b/04-multiplication/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/app.ts -b 10",
+    "dev": "ts-node src/app.ts -b 10 -s",
     "dev:nodemon": "nodemon",
     "build": "rimraf ./dist && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
