--- a/04-multiplication/package.json
+++ b/04-multiplication/package.json
@@ -7,16 +7,22 @@
     "dev": "ts-node src/app.ts -b 10 -s",
     "dev:nodemon": "nodemon",
     "build": "rimraf ./dist && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.20",
     "@types/yargs": "^17.0.32",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
