--- a/05-NOC/package.json
+++ b/05-NOC/package.json
@@ -21,6 +21,7 @@
     "cron": "^3.1.6",
     "dotenv": "^16.4.5",
     "env-var": "^7.4.1",
+    "mongoose": "^8.2.3",
     "nodemailer": "^6.9.12"
   }
 }
