--- a/05-NOC/package.json
+++ b/05-NOC/package.json
@@ -13,11 +13,13 @@
   "devDependencies": {
     "@types/node": "^20.11.25",
     "@types/nodemailer": "^6.4.14",
+    "prisma": "^5.12.1",
     "rimraf": "^5.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.12.1",
     "cron": "^3.1.6",
     "dotenv": "^16.4.5",
     "env-var": "^7.4.1",
